## Changelog 15/04/2020
Passage en version 2.1.1 pour qualification par un testeur

## Changelog 11/04/2020
Dans la boucle d'attente passage à un incrément de 1/4 de seconde et modification du calcul de l'heure de début
Correction de l'affichage de MluDelay la valeur est en ms et l'unité affichée était la seconde

## Changelog 23/03/2020
git rm de .gitignore
Amélioration de la documentation.

## Changelog 15/03/2020
Création de la branche feature_interval pour ajouter un nouveau type de ligne dans le script de séquence
MLua_mount_imgSD - Corrections du texte affiché
MLua_PIC - Ajout d'information dans les commentaires
eclipse_OZ - Ajout de la gestion de l'action Interval. L'intervalle est calculé à partir de la durée divisée par le nb de photos voulu. Modification du log pour améliorer la lecture.
Readme - Description de la nouvelle fonction Interval et corrections diverses.

## Changelog 13/03/2020
Modification de l'image de validation du module Lua. Initialement le module Lua est en bas d'écran.

## Changelog 07/03/2020
Modification du fichier séquence pour des tests de qualification.
Corrections diverses dans les docs.

## Changelog 05/03/2020
Mise en fonction de la gestion des actions.
Création de la fonction read_config qui lit la ligne Config et en retire les valeurs Cx Max et TestMode.
Création de la fonction convert_time qui retourne l'heure calculée en seconde en fonction de la référence, de l'opérande et de l'heure en entrée.
Ajout d'une opérande pour le time Start et le time End.
Complément d'informations sur la syntaxe du script d'exemple.
Dans le Readme.md, ajout des nouvelles méthodes de calcul et de gestion des circonstances locales ainsi que la description de la ligne Config et un exemple de fichier log.

## Changelog 02/03/2020
Création d'une branche dans Git.
Evolution de la gestion du fichier de programmation des séquences.